--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ PyYAML==6.0.2
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 Werkzeug==3.1.1
+## The following requirements were added by pip freeze:
+psycopg2==2.9.10
