--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,11 @@ SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 Werkzeug==3.1.1
 psycopg2==2.9.10
-flask-cors==4.0.0
+Flask-Cors==4.0.0
+## The following requirements were added by pip freeze:
+iniconfig==2.0.0
+packaging==24.2
+pluggy==1.5.0
+psycopg2-binary==2.9.10
+pytest==8.3.4
+pytest-flask==1.3.0
